k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bufefrontend
  labels:
    app: bufefrontend
spec:
  selector:
    app: bufefrontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
