k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bufefrontend
  labels:
    app: bufefrontend
spec:
  rules:
    - host: bufefront-panyik-krisztian.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bufefrontend
                port:
                  number: 80
